final changes to my website

--- a/index.html
+++ b/index.html
@@ -25,31 +25,33 @@
      <h2 class="subheader">Positioning Lesson Plan</h2>
 
         <div class="text-align-center">
-            This text is positioned using text-align center.
+            In this class exercise, we learned how to create a stylesheet in CSS! This gives us the ability to be more creative with our web development process. In this very div, we commanded the text to be aligned in the center, just like so. We also highlighted the text aqua all the way to the end of the margins of the column. 
         </div>
 
         <div class="margin-auto">
-            <div>This text is in a div positioned by margin:auto</div>
+            <div>Whereas in this div, we created a margin with a width of 50% of the page body. Some cool things we did was create columns and inserted images into them.</div>
         </div>
         
         <div class="my-row">
             <div class="my-column" style="background-color:#aaa;">
-                <h2>Column 1</h2>
-                <p>Left column desktop, stacks in mobile</p>
+                <h2>Left Column</h2>
+                <p>When this webpage is viewed on a desktop, the images will be side to side.</p>
                 <div class="flexible">
-                    <div style="max-width:300px">
+                    <div style="max-width:320px">
                         <img src="https://picsum.photos/id/237/536/354" />
+                        <p>This is an image of a dog.</p>
                     </div>
                    </div>
 
                 <p>From <a href="https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_two_columns_responsive" target="_blank">W3Schools</a></p>
             </div>
             <div class="my-column" style="background-color:#bbb;">
-                <h2>Column 2</h2>
-                <p>Right column desktop, stacks in mobile</p>
+                <h2>Right Column</h2>
+                <p>When viewed on mobile, the website will have the pictures stacked on one another, for better visuals.</p>
                 <div class="flexible">
                     <div style="max-width:400px">
                         <img src="https://picsum.photos/id/1074/536/354" />
+                        <p>This is an image of a lioness.</p>
                     </div>
                    </div>
             </div>
